[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
awc = { version = "3.5.1", features = ["openssl"]}
actix-files="0.6.6"
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"

[dev-dependencies]
actix-rt = "2.10.0"