[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files="0.6.6"
awc = { version = "3.5.1", features = ["openssl"]}
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
openssl = { version = "0.10.57", features = ["vendored"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros"]}
rust-argon2 = "2.1.0"
dotenv = "0.15.0"
argon2 = "0.5.3"

[dev-dependencies]
actix-rt = "2.10.0"